# lighttwist

./: README  SEB Matrox TripleHead Example.qtz
imgu/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.txt  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
imgu/.svn/: all-wcprops  dir-prop-base  entries
imgu/.svn/text-base/: Doxyfile.svn-base  FindIMGU.cmake.svn-base  configure.svn-base
imgu/CMakeModules/.svn/: all-wcprops  entries
imgu/Modules/: FindANN.cmake  FindBMC.cmake  FindBlackMagic.cmake  FindCMINPACK.cmake  FindDoxygen.cmake  FindEpiphan.cmake  FindFFMPEG.cmake  FindOSG.cmake  FindPROFILOMETRE.cmake  FindPROSILICA.cmake  FindPT.cmake  FindRQUEUE.cmake  FindSWSCALE.cmake  FindV4L.cmake  OpenCVConfig.cmake
imgu/apps/: CMakeLists.txt  Makefile  cmake_install.cmake  pngls  pngls.c  pngmerge.c  pngmoyenne  pngmoyenne.c  pngselect.c  pngskiper.c  pngtrack.c  pngtrackdouble.c
imgu/apps/.svn/: all-wcprops  entries
imgu/apps/.svn/text-base/: pngdraw.c.svn-base  pngfft.c.svn-base  pngreverse.c.svn-base  pngtext.c.svn-base
imgu/data/: CMakeLists.txt  Makefile  PM-14.pgm  cmake_install.cmake  coeffDisto_d60.data  cube.osg  horloge10.avi
imgu/data/.svn/: all-wcprops  entries
imgu/data/.svn/text-base/: cibleAx-.jpg.svn-base  cibleAy+.jpg.svn-base  info.png.svn-base  paint.frag.svn-base  texture128_1.jpg.svn-base  texture128_2.jpg.svn-base  texture128_4.jpg.svn-base  texture_rgba.png.svn-base
imgu/data/debruijn/.svn/: all-wcprops  entries
imgu/data/debruijn/.svn/text-base/: debruijn_3bandes_11sym.png.svn-base  debruijn_3bandes_13sym.png.svn-base  debruijn_3bandes_2sym.png.svn-base  debruijn_3bandes_4sym.png.svn-base  debruijn_3bandes_7sym.png.svn-base  debruijn_3bandes_8sym.png.svn-base  debruijn_3bandes_9sym.png.svn-base  debruijn_4bandes_2sym.png.svn-base  debruijn_4bandes_5sym.png.svn-base  debruijn_4bandes_6sym.png.svn-base  debruijn_4bandes_7sym.png.svn-base  debruijn_4bandes_8sym.png.svn-base
imgu/data/shaders/: shader_rgb.glsl  shader_rgblutHL.glsl  shader_rgblutblend.glsl
imgu/data/shaders/.svn/: all-wcprops  entries
imgu/data/shaders/.svn/text-base/: shader_gray.glsl.svn-base  shader_rgba.glsl.svn-base  shader_rgblut.glsl.svn-base  shader_yuv.glsl.svn-base  shader_yuvclamp.glsl.svn-base  shader_yuvlutHLblend.glsl.svn-base  shader_yuvlutblend.glsl.svn-base
imgu/doxygen/.svn/: all-wcprops  entries
imgu/examples/: Makefile  base.cpp  cmake_install.cmake  imguCanny  imguCapture.c  imguComplex  imguDiapoSubtitle.c  imguFit  imguGimpView.c  imguIRIC  imguIRIC.c  imguInfo  imguInfo.c  imguInterpolate  imguInterpolate.c  imguJoin  imguMake8bits  imguMerge  imguMinGray  imguMinGray.c  imguSee.cpp  imguSift  imguSiftMatch  imguSiftMatch.c  imguSplit  imguSplit.c  imguStl.cpp  imguTestCamera.c  imguTestCapture.c  imguTestCreate  imguTestCreate8  imguTestDeinterlace.c  imguTestGPU.cpp  imguTestGroupCam.c  imguTestLoadSave.c  imguTestPlugin.c  imguVideoTile.c  imguViewer.cpp  imguviewosc.cpp  viewmanager.cpp
imgu/examples/.svn/: all-wcprops  entries
imgu/examples/.svn/text-base/: CMakeLists.txt.svn-base  base.h.svn-base  imguCameraPanTilt.c.svn-base  imguCanny.c.svn-base  imguComplex.c.svn-base  imguDoubleCapture.c.svn-base  imguEclairage.cpp.svn-base  imguFASexpo.c.svn-base  imguFFT.cpp.svn-base  imguFit.c.svn-base  imguGrabFoeCamera.c.svn-base  imguJoin.c.svn-base  imguMake8bits.c.svn-base  imguMerge.c.svn-base  imguPaint.cpp.svn-base  imguPushBroom.c.svn-base  imguSift.c.svn-base  imguStream.c.svn-base  imguTestCreate.c.svn-base  imguTestMultiCam.c.svn-base  imguTestSnapshotFilter.c.svn-base  imguVideoPlayer.c.svn-base  imguViewerLarge.cpp.svn-base  imgucalib.c.svn-base  imgupointpick.cpp.svn-base  imgustreamv4l2.c.svn-base  imguview.cpp.svn-base  scanner.cpp.svn-base  scannerdell.cpp.svn-base  tileinfo.c.svn-base  tileinfo.h.svn-base  viewmanager.h.svn-base
imgu/examples/undocumented/: fits2png.c  imgutest.c
imgu/examples/undocumented/.svn/: all-wcprops  entries
imgu/scripts/: adjust_network_buffers  doscan  install_basics  xrandr_sample
imgu/src/: CMakeLists.txt  Makefile  cmake_install.cmake  imgu.h  imgu.h.in  imgu8.h  imgu_args.c  imgu_args.h  imgu_camera.c  imgu_camera.h  imgu_canny.c  imgu_canny.h  imgu_complex.c  imgu_complex.h  imgu_core.c  imgu_core.h  imgu_draw.c  imgu_draw.h  imgu_interpolate.c  imgu_interpolate.h  imgu_interpolate_view.c  imgu_interpolate_view.h  imgu_jpeg.c  imgu_jpeg.h  imgu_matrix.c  imgu_matrix.h  imgu_netpbm.c  imgu_netpbm.h  imgu_osg.c  imgu_osg.h  imgu_plugin.c  imgu_plugin.h  imgu_pyramid.c  imgu_pyramid.h  imgu_recycle.c  imgu_recycle.h  imgu_seam.cpp  imgu_seam.h  imgu_sequence.c  imgu_sift.cpp  (+10 more)
imgu/test/: endian.c  mm.c  scale.c  texte.c
